added voting and matchup endpoints
