# swagger_output.json
@@ -5,7 +5,7 @@
     "title": "Flipic API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:4101",
+  "host": "localhost:4000",
   "basePath": "/",
   "tags": [
     {
@@ -99,6 +99,57 @@
         }
       }
     },
+    "/quiz-matchup/{id}": {
+      "get": {
+        "tags": [
+          "Quiz"
+        ],
+        "description": "Endpoint to get a matchup of 2 items",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/quiz-vote": {
+      "post": {
+        "tags": [
+          "Quiz"
+        ],
+        "description": "Endpoint to vote on a matchup",
+        "parameters": [
+          {
+            "name": "quiz",
+            "in": "body",
+            "description": "Quiz and item Ids.",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/QuizItemIds"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/quiz-all": {
       "get": {
         "tags": [
@@ -144,6 +195,19 @@
           "items": {
             "$ref": "#/definitions/Item"
           }
+        }
+      }
+    },
+    "QuizItemIds": {
+      "type": "object",
+      "properties": {
+        "quizId": {
+          "type": "string",
+          "example": "Quiz Id"
+        },
+        "itemId": {
+          "type": "string",
+          "example": "Item Id"
         }
       }
     }
